--- a/backend/.env
+++ b/backend/.env
@@ -3,7 +3,7 @@ RPC_URL=http://localhost:8545
 CONTRACT_ADDRESS=0x5FbDB2315678afecb367f032d93F642f64180aa3
 # CONTRACT_ADDRESS=0xDc64a140Aa3E981100a9becA4E685f962f0cF6C9
 # MONGO_URI=mongodb://localhost:27017
-MONGO_URI=mongodb+srv://kaifmominEHR:MK%40ehrdb@ehr.lj7zyl4.mongodb.net/?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://<username>:<password>@<cluster>.mongodb.net/ehr?retryWrites=true&w=majority
 DB_NAME=ehrKP
 RPC_URL=http://127.0.0.1:8545
 JWT_SECRET=kunal_kaif_zaid_abdul
@@ -13,4 +13,5 @@ ADMIN_EMAIL=admin@ehr.com
 ADMIN_PASSWORD=Pass123@
 ADMIN_NAME=System Administrator
 ADMIN_WALLET_ADDRESS=0x1234567890123456789012345678901234567890
+
 
